<resources>
    <string name="app_name">C&amp;P</string>

    <string name="address">Address </string>
    <string name="street">Street: </string>
    <string name="suite">Suite: </string>
    <string name="city">City: </string>
    <string name="zipcode">Zipcode: </string>

    <string name="company">Company</string>
    <string name="companyName">Name: </string>
    <string name="catchPhrase">catchPhrase: </string>
    <string name="bs">bs: </string>

    <string name="todolist">Todo list</string>
    <string name="userList">User list</string>

    <string name="todoDetail">Todo detail</string>
    <string name="userDetail">User detail</string>

    <string name="todoComplete">Todo complete =D</string>
    <string name="todoIncomplete">Todo incomplete =(</string>
</resources>