<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userDetailViewModel"
            type="com.companytest.jsonplaceholderintegration.viewmodel.UserDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLoadingContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visible="@{userDetailViewModel.loading}">


            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/multiplier_12X_dp"
            app:cardCornerRadius="@dimen/multiplier_5X_dp"
            android:layout_margin="@dimen/multiplier_5X_dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@{userDetailViewModel.user.name}"
                    android:textColor="#424242"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@{userDetailViewModel.user.email}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/multiplier_4X_dp"
            app:cardCornerRadius="@dimen/multiplier_4X_dp"
            android:layout_margin="@dimen/multiplier_5X_dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/multiplier_3X_dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/titleText"
                    android:text="@string/address"
                    android:textSize="@dimen/multiplier_10X_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvStreetDetailHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_10X_dp"
                    android:text="@string/street"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/tvSuiteDetailHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@string/suite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvStreetDetailHint" />

                <TextView
                    android:id="@+id/tvCityDetailHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@string/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSuiteDetailHint" />

                <TextView
                    android:id="@+id/tvZipCodeDetailHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@string/zipcode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCityDetailHint" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/tvStreetDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{userDetailViewModel.user.address.street}"
                    app:layout_constraintBottom_toBottomOf="@+id/tvStreetDetailHint"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    tools:text="textview" />

                <TextView
                    android:id="@+id/tvSuiteDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@{userDetailViewModel.user.address.suite}"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSuiteDetailHint"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/tvStreetDetail"
                    tools:text="textview" />

                <TextView
                    android:id="@+id/tvCityDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@{userDetailViewModel.user.address.city}"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCityDetailHint"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/tvSuiteDetail"
                    tools:text="textview" />

                <TextView
                    android:id="@+id/tvZipCodeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@{userDetailViewModel.user.address.zipcode}"
                    app:layout_constraintBottom_toBottomOf="@+id/tvZipCodeDetailHint"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/tvCityDetail"
                    tools:text="textview" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/multiplier_4X_dp"
            app:cardCornerRadius="@dimen/multiplier_4X_dp"
            android:layout_margin="@dimen/multiplier_5X_dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/multiplier_3X_dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    style="@style/titleText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_10X_dp"
                    android:text="@string/companyName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@string/catchPhrase"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@string/bs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/tvCompanyNameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{userDetailViewModel.user.company.name}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    tools:text="textview" />

                <TextView
                    android:id="@+id/tvCatchDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@{userDetailViewModel.user.company.catchPhrase}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompanyNameDetail"
                    tools:text="textview" />

                <TextView
                    android:id="@+id/tvBsDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/multiplier_5X_dp"
                    android:text="@{userDetailViewModel.user.company.bs}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvCatchDetail"
                    tools:text="textview" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>